added some changes of html

--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="bg-[#F9F7F3]">
         <div class="flex justify-between items-center py-4 w-11/12 md:w-10/12 mx-auto ">
-          <button id="home-nav-btn" class="btn btn-active btn-secondary bg-lime-400 border-none text-black">Home</button>
+          <button id="home-nav-btn" class="btn  bg-lime-400 border-none text-black">Home</button>
           <div class="flex gap-1 md:gap-2 items-center">
              <img class="w-1/12 md:w-2/12 " src="assets/logo.png" alt="">
              <h3 class="text-sm font-bold md:text-2xl">Donate Bangladesh</h3>
